# ListenToMe

./: .gitignore  README.md
backend/: pyproject.toml
backend/config/: asgi.py  wsgi.py
backend/config/settings/: local.py
backend/listen_to_me/: manage.py
backend/listen_to_me/listen_to_me/: asgi.py  settings.py  urls.py  wsgi.py
backend/listentome/: .gitignore  README.md  local.yml  manage.py  production.yml  pyproject.toml
backend/listentome/.devcontainer/: devcontainer.json
backend/listentome/.envs/.local/: .postgres
backend/listentome/compose/production/traefik/: traefik.yml
backend/listentome/config/: api_router.py  asgi.py  urls.py  wsgi.py
backend/listentome/config/settings/: base.py  local.py  production.py  test.py
backend/listentome/docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
backend/listentome/docs/pycharm/: configuration.rst
backend/listentome/listentome/: conftest.py
backend/listentome/listentome/templates/: base.html
backend/listentome/listentome/users/: adapters.py  admin.py  apps.py  models.py  urls.py
backend/listentome/listentome/users/api/: serializers.py
backend/listentome/listentome/users/migrations/: 0001_initial.py
backend/listentome/listentome/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_urls.py  test_views.py
backend/listentome/locale/en_US/LC_MESSAGES/: django.po
backend/listentome/locale/fr_FR/LC_MESSAGES/: django.po
backend/listentome/locale/pt_BR/LC_MESSAGES/: django.po
(+1 files in other folders)
